--- a/cui/uiconfig/ui/optonlineupdatepage.ui
+++ b/cui/uiconfig/ui/optonlineupdatepage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.19.0 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkFrame" id="OptOnlineUpdatePage">
@@ -111,8 +111,8 @@
               <object class="GtkLabel" id="lastchecked">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Last checked: %DATE%, %TIME%</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -169,8 +169,8 @@
                       <object class="GtkLabel" id="destpathlabel">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">Download destination:</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
@@ -217,11 +217,11 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="extrabits">
-                <property name="label" translatable="yes">_Send OS version &amp; simple hardware info.</property>
-                <property name="tooltip_text" translatable="yes">This information lets us optimize for your hardware &amp; OS.</property>
+                <property name="label" translatable="yes">_Send OS version and basic hardware information</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
+                <property name="tooltip_text" translatable="yes">This information lets us make optimizations for your hardware and operating system.</property>
                 <property name="use_underline">True</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
@@ -237,29 +237,29 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="spacing">8</property>
-                <property name="homogeneous">False</property>
                 <child>
                   <object class="GtkLabel" id="useragent_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="yalign">0</property>
                     <property name="label" translatable="yes">User Agent:</property>
+                    <property name="yalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
+                    <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="useragent_changed">
-                    <property name="visible">False</property>
                     <property name="can_focus">False</property>
-                    <property name="yalign">0</property>
                     <property name="label" translatable="yes">Hit apply to update</property>
+                    <property name="yalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
@@ -271,6 +271,7 @@
                   <packing>
                     <property name="expand">True</property>
                     <property name="fill">True</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
@@ -284,8 +285,8 @@
               <object class="GtkLabel" id="neverchecked">
                 <property name="can_focus">False</property>
                 <property name="no_show_all">True</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Last checked: Not yet</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
