--- a/sw/uiconfig/swriter/ui/mailconfigpage.ui
+++ b/sw/uiconfig/swriter/ui/mailconfigpage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.19.0 -->
 <interface>
-  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gtk+" version="3.6"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">1</property>
     <property name="upper">65535</property>
@@ -81,7 +81,7 @@
                   <object class="GtkLabel" id="displayname_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">end</property>
                     <property name="label" translatable="yes">_Your name:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">displayname</property>
@@ -95,7 +95,7 @@
                   <object class="GtkLabel" id="address_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">end</property>
                     <property name="label" translatable="yes">_E-mail address:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">address</property>
@@ -125,8 +125,7 @@
                   <object class="GtkLabel" id="replyto_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="margin_left">12</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">end</property>
                     <property name="label" translatable="yes">_Reply address:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">replyto</property>
@@ -216,36 +215,10 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkSpinButton" id="port">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">●</property>
-                        <property name="adjustment">adjustment1</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">3</property>
-                        <property name="top_attach">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="port_label">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="xalign">0.75</property>
-                        <property name="label" translatable="yes">_Port:</property>
-                        <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">port</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">2</property>
-                        <property name="top_attach">0</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkLabel" id="server_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
+                        <property name="halign">end</property>
                         <property name="label" translatable="yes">_Server name:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">server</property>
@@ -253,6 +226,33 @@
                       <packing>
                         <property name="left_attach">0</property>
                         <property name="top_attach">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="port_label">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">end</property>
+                        <property name="label" translatable="yes">_Port:</property>
+                        <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">port</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSpinButton" id="port">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="halign">start</property>
+                        <property name="invisible_char">●</property>
+                        <property name="adjustment">adjustment1</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">1</property>
                       </packing>
                     </child>
                   </object>
@@ -265,13 +265,13 @@
                   <object class="GtkButtonBox" id="buttonbox1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="halign">center</property>
+                    <property name="halign">start</property>
                     <property name="margin_right">12</property>
                     <property name="orientation">vertical</property>
                     <property name="layout_style">center</property>
                     <child>
                       <object class="GtkButton" id="serverauthentication">
-                        <property name="label" translatable="yes">Server Au_thentication</property>
+                        <property name="label" translatable="yes">Ser_ver Authentication…</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
@@ -314,12 +314,12 @@
       <object class="GtkButtonBox" id="buttonbox2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="halign">center</property>
+        <property name="halign">end</property>
         <property name="orientation">vertical</property>
         <property name="layout_style">center</property>
         <child>
           <object class="GtkButton" id="test">
-            <property name="label" translatable="yes">Test S_ettings...</property>
+            <property name="label" translatable="yes">_Test Settings</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
