--- a/sc/uiconfig/scalc/ui/validationcriteriapage.ui
+++ b/sc/uiconfig/scalc/ui/validationcriteriapage.ui
@@ -182,7 +182,7 @@
               </packing>
             </child>
             <child>
-              <object class="scuilo-ScRefButtonEx" id="validref">
+              <object class="sclo-ScRefButtonEx" id="validref">
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="no_show_all">True</property>
