--- a/svx/uiconfig/ui/findreplacedialog.ui
+++ b/svx/uiconfig/ui/findreplacedialog.ui
@@ -196,7 +196,7 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="searchformatted">
-                                <property name="label" translatable="yes">Formatted display</property>
+                                <property name="label" translatable="yes">For_matted display</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -251,7 +251,7 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="allsheets">
-                                <property name="label" translatable="yes">All sheets</property>
+                                <property name="label" translatable="yes">All _sheets</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="no_show_all">True</property>
@@ -436,7 +436,7 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="backsearch">
-                    <property name="label" translatable="yes">Find Previous</property>
+                    <property name="label" translatable="yes">Find Pre_vious</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -450,7 +450,7 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="search">
-                    <property name="label" translatable="yes">_Find Next</property>
+                    <property name="label" translatable="yes">Find Ne_xt</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
@@ -646,7 +646,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkCheckButton" id="regexp">
-                                    <property name="label" translatable="yes">Regular e_xpressions</property>
+                                    <property name="label" translatable="yes">Re_gular expressions</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="no_show_all">True</property>
@@ -668,7 +668,7 @@
                                     <property name="layout_style">spread</property>
                                     <child>
                                       <object class="GtkButton" id="attributes">
-                                        <property name="label" translatable="yes">Attri_butes...</property>
+                                        <property name="label" translatable="yes">Attribut_es...</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="no_show_all">True</property>
@@ -747,7 +747,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkCheckButton" id="ignorekashida">
-                                    <property name="label" translatable="yes">Ig_nore kashida CTL</property>
+                                    <property name="label" translatable="yes">Ignore _kashida CTL</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
@@ -825,7 +825,7 @@
                                     <property name="spacing">12</property>
                                     <child>
                                       <object class="GtkCheckButton" id="soundslike">
-                                        <property name="label" translatable="yes">_Sounds like (Japanese)</property>
+                                        <property name="label" translatable="yes">Sounds like (_Japanese)</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">False</property>
                                         <property name="no_show_all">True</property>
@@ -906,7 +906,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkCheckButton" id="replace_backwards">
-                                    <property name="label" translatable="yes">Replace Bac_kwards</property>
+                                    <property name="label" translatable="yes">Replace _backwards</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="no_show_all">True</property>
@@ -1021,7 +1021,7 @@
                                         </child>
                                         <child>
                                           <object class="GtkRadioButton" id="cols">
-                                            <property name="label" translatable="yes">Colu_mns</property>
+                                            <property name="label" translatable="yes">Colum_ns</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="no_show_all">True</property>
