Add spacing between shape groups in Default Shapes Panel
Change-Id: I6b0b5072fc095fe8c89fe4eba497ed0b7610203c
Reviewed-on: https://gerrit.libreoffice.org/28085
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>
Tested-by: Yousuf Philips <philipz85@hotmail.com>

--- a/svx/uiconfig/ui/defaultshapespanel.ui
+++ b/svx/uiconfig/ui/defaultshapespanel.ui
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <!-- interface-requires LibreOffice 1.0 -->
+  <requires lib="LibreOffice" version="1.0"/>
   <object class="GtkGrid" id="DefaultShapesPanel">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -30,6 +30,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
+                    <property name="spacing">3</property>
                     <child>
                       <object class="GtkFrame" id="LinesFrame">
                         <property name="visible">True</property>
@@ -415,8 +416,6 @@
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">0</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
   </object>
