--- a/svx/uiconfig/ui/sidebarparagraph.ui
+++ b/svx/uiconfig/ui/sidebarparagraph.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.4"/>
   <requires lib="LibreOffice" version="1.0"/>
@@ -288,6 +288,8 @@
               <object class="GtkBox" id="box11">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">4</property>
+                <property name="margin_right">6</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage" id="image6">
@@ -336,6 +338,8 @@
               <object class="GtkBox" id="box12">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">4</property>
+                <property name="margin_right">6</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage" id="image7">
@@ -385,6 +389,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="has_tooltip">True</property>
+                <property name="margin_left">1</property>
                 <property name="hexpand">True</property>
                 <child>
                   <object class="GtkMenuToolButton" id="setlinespacing">
@@ -495,6 +500,8 @@
               <object class="GtkBox" id="box14">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">4</property>
+                <property name="margin_right">6</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage" id="image8">
@@ -542,6 +549,8 @@
               <object class="GtkBox" id="box15">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">4</property>
+                <property name="margin_right">6</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage" id="image9">
@@ -589,6 +598,8 @@
               <object class="GtkBox" id="box16">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">4</property>
+                <property name="margin_right">6</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkImage" id="image10">
