--- a/sw/uiconfig/swriter/ui/sidebarwrap.ui
+++ b/sw/uiconfig/swriter/ui/sidebarwrap.ui
@@ -2,48 +2,6 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
-  <object class="GtkListStore" id="spacinglist">
-    <columns>
-      <!-- column-name gchararray1 -->
-      <column type="gchararray"/>
-      <!-- column-name gint1 -->
-      <column type="gint"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">None</col>
-        <col id="1">0</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Extra Small (0.16cm)</col>
-        <col id="1">91</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Small (0.32cm)</col>
-        <col id="1">181</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Small Medium (0.64cm)</col>
-        <col id="1">363</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Medium (0.95cm)</col>
-        <col id="1">539</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Medium Large (1.27cm)</col>
-        <col id="1">720</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Large (1.9cm)</col>
-        <col id="1">1077</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Extra Large (2.54cm)</col>
-        <col id="1">1440</col>
-      </row>
-    </data>
-  </object>
   <object class="GtkGrid" id="WrapPropertyPanel">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -68,7 +26,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">None</property>
                 <property name="tooltip_text" translatable="yes">None</property>
                 <property name="action_name">.uno:WrapOff</property>
                 <property name="xalign">0</property>
@@ -92,7 +49,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Parallel</property>
                 <property name="tooltip_text" translatable="yes">Parallel</property>
                 <property name="action_name">.uno:WrapOn</property>
                 <property name="xalign">0</property>
@@ -116,7 +72,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Optimal</property>
                 <property name="tooltip_text" translatable="yes">Optimal</property>
                 <property name="action_name">.uno:WrapIdeal</property>
                 <property name="xalign">0</property>
@@ -140,7 +95,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Before</property>
                 <property name="tooltip_text" translatable="yes">Before</property>
                 <property name="action_name">.uno:WrapLeft</property>
                 <property name="xalign">0</property>
@@ -164,7 +118,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">After</property>
                 <property name="tooltip_text" translatable="yes">After</property>
                 <property name="action_name">.uno:WrapRight</property>
                 <property name="xalign">0</property>
@@ -188,7 +141,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Through</property>
                 <property name="tooltip_text" translatable="yes">Through</property>
                 <property name="action_name">.uno:WrapThrough</property>
                 <property name="xalign">0</property>
@@ -224,7 +176,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Click to automatically trim unnecessary parts of the image</property>
                 <property name="tooltip_text" translatable="yes">Click to automatically trim unnecessary parts of the image</property>
                 <property name="xalign">0</property>
                 <property name="draw_indicator">True</property>
@@ -241,7 +192,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="tooltip_markup" translatable="yes">Edit the trimmed area of the image</property>
                 <property name="tooltip_text" translatable="yes">Edit the trimmed area of the image</property>
               </object>
               <packing>
@@ -275,12 +225,10 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBox" id="spacingLB">
+              <object class="svxcorelo-SpacingListBox" id="spacingLB">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="tooltip_markup" translatable="yes">Set the amount of space between the image and surrounding text</property>
                 <property name="tooltip_text" translatable="yes">Set the amount of space between the image and surrounding text</property>
-                <property name="model">spacinglist</property>
               </object>
               <packing>
                 <property name="expand">False</property>
